# Epitech-Third-Year

./: README.md
AIA_gomoku_2019/: Makefile  pbrain-gomoku-ai.py
CPP_rtype_2019/: CMakeCache.txt  CMakeLists.txt  building  conanfile.txt  protocol
CPP_rtype_2019/Documentation/: README.md  RFC.docx  ~$RFC.docx
CPP_rtype_2019/client/include/: main.hpp  udp.hpp
CPP_rtype_2019/client/sources/: Shot_Alien.cpp  Textures_Sprites.cpp  get_set_pos.cpp  main.cpp  mouvement.cpp  udp.cpp
CPP_rtype_2019/server/include/: gameEngine.hpp  server.hpp
CPP_rtype_2019/server/sources/: gameEngine.cpp  main.cpp  server.cpp
DEV_area_2019/: README.txt
DEV_area_2019/Area_App/: Dockerfile  package-lock.json  package.json
DEV_area_2019/client/: package.json
DEV_dashboard_2019/: Dockerfile  about.json  app.js  checkbox.css  docker-compose.yml  package-lock.json  package.json  script.js  server.js  style.css
DEV_dashboard_2019/doc/: README
DEV_dashboard_2019/pages/: home.html  log.html  signup.html  widget.html  yt.html
DOP_docker_2019/: docker-compose.yml
DOP_docker_2019/poll/: Dockerfile
DOP_docker_2019/result/: Dockerfile
DOP_docker_2019/worker/: Dockerfile
NWP_myftp_2018/: Makefile  server.c
OOP_arcade_2018/: Makefile  README.txt  dl.cpp  main.cpp  score.txt
OOP_arcade_2018/games/: game.cpp
OOP_arcade_2018/include/: SFML.hpp  dl.hpp  interface.hpp  ncurse.hpp  sdl.hpp
OOP_arcade_2018/lib/: lib_ncurse.cpp  lib_ncurse2.cpp  lib_ncurse3.cpp  lib_ncurse4.cpp  lib_ncurse5.cpp  lib_sdl.cpp  lib_sdl2.cpp  lib_sdl3.cpp  lib_sdl4.cpp  lib_sdl5.cpp  lib_sfml.cpp  lib_sfml2.cpp  lib_sfml3.cpp  (+2 more)
(+33 files in other folders)
